# embucket-snowflake-connector

./: LICENSE  README.md  pyproject.toml
src/embucket_spcs_connector/: __init__.py  cli.py  patch.py
tests/: test_patch.py
