[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "embucket-snowflake-connector"
version = "0.1.0"
description = "Snowflake connector/CLI patch for Embucket on Snowpark Container Services"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "snowflake-connector-python>=3.18,<4",
]

[project.optional-dependencies]
cli = [
  "snowflake-cli>=3.0",
]
dev = [
  "pytest>=8",
  "snowflake-cli>=3.0",
]

[project.scripts]
embucket-snow = "embucket_spcs_connector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/embucket_spcs_connector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
